--- a/src/main/resources/connection.properties
+++ b/src/main/resources/connection.properties
@@ -1,4 +1,4 @@
-jdbc.url=jdbc:mysql://localhost:3306/db_persona
+jdbc.url=jdbc:mysql://localhost:3306/testmoto
 driver=com.mysql.cj.jdbc.Driver
 username=Carlos Galvis
 password=Dragohalo2
